# CPP_Exam

Cpp_testing_exam/: CMakeLists.txt
Cpp_testing_exam/Cpp_testing_exam/: CMakeLists.txt  Cpp_testing_exam.cpp  Cpp_testing_exam.h
Cpp_testing_exam/Task_2/: CMakeLists.txt  task2.cpp  task2.h
Cpp_testing_exam/Task_3/: CMakeLists.txt  task3.cpp  task3.hpp  task4.cpp  task4.hpp
